# otus_kube

./: Dockerfile  Readme.md  pyproject.toml
.kube/: deployment.yaml  ingress.yaml  rewrite_ingress.yaml  service.yaml
src/: main.py
