[tool.poetry]
name = "otus-kube"
version = "0.1.0"
description = ""
authors = ["Aleksandr Mazurenko <amazurenko@rvision.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
